--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ assets:
   cachebust: soft
 
 # Site settings
-title: Proteus
-description: Prototyping starter kit for Jekyll
+title: ИнтерФюрра
+description: 'TODO: change - Prototyping starter kit for Jekyll'
 
 # Name of project on Github
 #baseurl: /a-site
